k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aidconnect
  labels:
    name: aidconnect
    environment: production
